--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
-[phases.setup]
-nixPkgs = ["python311Full"]
+# Railway.app uchun Nixpacks konfiguratsiyasi
+providers = ["python"]
 
 [phases.install]
-cmds = ["python3 -m ensurepip --upgrade", "python3 -m pip install -r requirements.txt"]
+dependsOn = ["setup"]
 
-[start]
-cmd = "python3 main.py"
+[variables]
+NIXPACKS_PYTHON_VERSION = "3.11"
